syntax = "proto3";

service WorkerService {
	rpc pingWS(pingWSRequest) returns (pingWSReply);
	rpc readStorage (readStorageRequest) returns (readStorageReply);
	rpc writeStorage (writeStorageRequest) returns (writeStorageReply);
	rpc updateIf (updateIfRequest) returns (updateIfReply);
}

//// structures ////

message didaVersion {
	int32 versionNumber = 1;
	int32 replicaId = 2;
}

message didaRecord {
	string id = 1;
	didaVersion DidaVersion = 2;
	string val = 3;
}

////////////////////

message readStorageRequest { 
	string id = 1;
	didaVersion DidaVersion = 2;
}

message readStorageReply {
	didaRecord DidaRecord = 1;
}

message writeStorageRequest {
	string id = 1;
	string val = 2;
}

message writeStorageReply {
	didaVersion DidaVersion = 1;
}

message updateIfRequest {
	string id = 1;
	string oldValue = 2;
	string newValue = 3;
}

message updateIfReply {
	didaVersion DidaVersion = 1;
}

message pingWSRequest {
}

message pingWSReply {
	int32 ok = 1;
}